@@ -3,33 +3,59 @@
  * file, You can obtain one at http://mozilla.org/MPL/2.0/. */
 package org.mozilla.jss.tests;
 
+import java.io.EOFException;
+import java.io.InputStream;
+import java.net.SocketException;
+import java.security.KeyPair;
+import java.security.NoSuchAlgorithmException;
+import java.security.NoSuchProviderException;
+import java.security.PrivateKey;
+import java.security.PublicKey;
+import java.security.SecureRandom;
 import java.security.cert.CertificateEncodingException;
+import java.util.Calendar;
+import java.util.Date;
+
 import org.mozilla.jss.CryptoManager;
 import org.mozilla.jss.NicknameConflictException;
 import org.mozilla.jss.UserCertConflictException;
-import org.mozilla.jss.ssl.*;
-import org.mozilla.jss.crypto.*;
-import org.mozilla.jss.asn1.*;
-import org.mozilla.jss.pkix.primitive.*;
-import org.mozilla.jss.pkix.cert.*;
+import org.mozilla.jss.asn1.ASN1Util;
+import org.mozilla.jss.asn1.BOOLEAN;
+import org.mozilla.jss.asn1.INTEGER;
+import org.mozilla.jss.asn1.OBJECT_IDENTIFIER;
+import org.mozilla.jss.asn1.OCTET_STRING;
+import org.mozilla.jss.asn1.SEQUENCE;
+import org.mozilla.jss.crypto.CryptoToken;
+import org.mozilla.jss.crypto.InternalCertificate;
+import org.mozilla.jss.crypto.NoSuchItemOnTokenException;
+import org.mozilla.jss.crypto.ObjectNotFoundException;
+import org.mozilla.jss.crypto.SignatureAlgorithm;
+import org.mozilla.jss.crypto.TokenException;
+import org.mozilla.jss.crypto.X509Certificate;
 import org.mozilla.jss.pkix.cert.Certificate;
+import org.mozilla.jss.pkix.cert.CertificateInfo;
+import org.mozilla.jss.pkix.cert.Extension;
+import org.mozilla.jss.pkix.primitive.AlgorithmIdentifier;
+import org.mozilla.jss.pkix.primitive.Name;
+import org.mozilla.jss.pkix.primitive.SubjectPublicKeyInfo;
+import org.mozilla.jss.ssl.SSLHandshakeCompletedEvent;
+import org.mozilla.jss.ssl.SSLHandshakeCompletedListener;
+import org.mozilla.jss.ssl.SSLProtocolVariant;
+import org.mozilla.jss.ssl.SSLSecurityStatus;
+import org.mozilla.jss.ssl.SSLServerSocket;
+import org.mozilla.jss.ssl.SSLSocket;
+import org.mozilla.jss.ssl.SSLVersionRange;
 import org.mozilla.jss.util.PasswordCallback;
-import java.util.Calendar;
-import java.util.Date;
-import java.security.*;
-import java.security.PrivateKey;
-import java.io.*;
-import java.net.SocketException;
 
 /**
  * SSLClientAuth Server/client test.
  */
 public class SSLClientAuth implements Runnable {
-    
+
     private CryptoManager cm;
     public static final SignatureAlgorithm sigAlg =
             SignatureAlgorithm.RSASignatureWithSHA256Digest;
-    
+
     /**
      * Method that generates a certificate for given credential
      *
@@ -47,40 +73,40 @@ public class SSLClientAuth implements Runnable {
             int serialNumber, PrivateKey privKey, PublicKey pubKey, int rand,
             SEQUENCE extensions) throws Exception {
         AlgorithmIdentifier sigAlgID = new AlgorithmIdentifier( sigAlg.toOID());
-        
+
         Name issuer = new Name();
         issuer.addCountryName("US");
         issuer.addOrganizationName("Mozilla");
         issuer.addOrganizationalUnitName("JSS Testing" + rand);
         issuer.addCommonName(issuerName);
-        
+
         Name subject = new Name();
         subject.addCountryName("US");
         subject.addOrganizationName("Mozilla");
         subject.addOrganizationalUnitName("JSS Testing" + rand);
         subject.addCommonName(subjectName);
-        
+
         Calendar cal = Calendar.getInstance();
         Date notBefore = cal.getTime();
         cal.add(Calendar.YEAR, 1);
         Date notAfter = cal.getTime();
-        
+
         SubjectPublicKeyInfo.Template spkiTemp =
                 new SubjectPublicKeyInfo.Template();
         SubjectPublicKeyInfo spki =
                 (SubjectPublicKeyInfo) ASN1Util.decode(spkiTemp,
                 pubKey.getEncoded());
-        
+
         CertificateInfo info = new CertificateInfo(
                 CertificateInfo.v3, new INTEGER(serialNumber), sigAlgID,
                 issuer, notBefore, notAfter, subject, spki);
         if( extensions != null ) {
             info.setExtensions(extensions);
         }
-        
+
         return new Certificate(info, privKey, sigAlg);
     }
-    
+
     /**
      *
      * @param args
@@ -89,38 +115,38 @@ public class SSLClientAuth implements Runnable {
     public static void main(String[] args) throws Exception {
         (new SSLClientAuth()).doIt(args);
     }
-    
+
     private X509Certificate nssServerCert, nssClientCert;
     private String serverCertNick, clientCertNick;
-    
-    
+
+
     /**
      *
      * @param args
      * @throws java.lang.Exception
      */
     public void doIt(String[] args) throws Exception {
-        
+
         if ( args.length < 2 ) {
             System.out.println("Usage: java org.mozilla.jss.tests." +
                     "SSLClientAuth <dbdir> <passwordFile> [port]" +
                     " [Certificate Serial Number]");
             System.exit(1);
         }
-        
+
         cm = CryptoManager.getInstance();
         CryptoToken tok = cm.getInternalKeyStorageToken();
-        
+
         PasswordCallback cb = new FilePasswordCallback(args[1]);
         tok.login(cb);
-        
+
         if (args.length >= 3) {
-            port = new Integer(args[2]).intValue();
+            port = Integer.valueOf(args[2]);
             System.out.println("using port:" + port);
         }
-        
+
         if (args.length >= 4) {
-            serialNum = new Integer(args[3]).intValue();
+            serialNum = Integer.valueOf(args[3]);
         } else {
              SecureRandom rng= SecureRandom.getInstance("pkcs11prng",
                 "Mozilla-JSS");
@@ -131,7 +157,7 @@ public class SSLClientAuth implements Runnable {
         /* we don't have to test all three */
         serverCertNick = "SSLserver-"+serialNum;
         clientCertNick = "SSLclient-"+serialNum;
-        
+
         certs = cm.findCertsByNickname(serverCertNick);
         if (certs.length == 0) {
             generateCerts(cm, serialNum);
@@ -146,17 +172,17 @@ public class SSLClientAuth implements Runnable {
                 ex.printStackTrace();
                 System.exit(1);
             }
-            
+
         }
         configureDefaultSSLoptions();
 
         testSpecificCiphers();
-        
+
         useNickname = false;
         testConnection();
         useNickname = true;
         testConnection();
-        
+
         System.out.println("Exiting main()");
         if( getSuccess() ) {
             System.exit(0);
@@ -164,11 +190,11 @@ public class SSLClientAuth implements Runnable {
             System.exit(1);
         }
     }
-    
+
     private boolean useNickname;
-    
+
     private void generateCerts(CryptoManager cm, int serialNum) {
-        
+
         // RSA Key with default exponent
         int keyLength = 4096;
         try {
@@ -189,7 +215,7 @@ public class SSLClientAuth implements Runnable {
                     InternalCertificate.TRUSTED_CA |
                     InternalCertificate.TRUSTED_CLIENT_CA |
                     InternalCertificate.VALID_CA);
-            
+
             // generate server cert
             kpg.initialize(keyLength);
             KeyPair serverPair = kpg.genKeyPair();
@@ -198,7 +224,7 @@ public class SSLClientAuth implements Runnable {
                     serialNum, null);
             nssServerCert = cm.importCertPackage(
                     ASN1Util.encode(serverCert), serverCertNick);
-            
+
             // generate client auth cert
             kpg.initialize(keyLength);
             KeyPair clientPair = kpg.genKeyPair();
@@ -232,7 +258,7 @@ public class SSLClientAuth implements Runnable {
             ex.printStackTrace();
             System.exit(1);
         }
-        
+
     }
     private void configureDefaultSSLoptions() {
         try {
@@ -312,21 +338,21 @@ public class SSLClientAuth implements Runnable {
             System.exit(1);
         }
     }
-    
+
     private void testConnection() throws Exception {
         serverReady = false;
-        
+
         // spawn server
         Thread server = new Thread(this);
         server.start();
-        
+
         // wait for server to open its socket
         synchronized(this) {
             while(!serverReady) {
                 this.wait();
             }
         }
-        
+
         // connect to the server
         System.out.println("client about to connect");
         SSLSocket sock = new SSLSocket("localhost", port);
@@ -340,17 +366,17 @@ public class SSLClientAuth implements Runnable {
         System.out.println("client connected");
         sock.addHandshakeCompletedListener(
                 new HandshakeListener("client",this));
-        
+
         // force the handshake
         sock.forceHandshake();
         String cipher = sock.getStatus().getCipher();
         System.out.println("client forced handshake. ciphersuite: " + cipher);
         sock.close();
-        
+
         // wait for the server to finish
         server.join();
     }
-    
+
     public static class HandshakeListener
             implements SSLHandshakeCompletedListener {
         private String who;
@@ -375,32 +401,32 @@ public class SSLClientAuth implements Runnable {
             }
         }
     }
-    
+
     public synchronized void setFailure() {
         success = false;
     }
-    
+
     public synchronized boolean getSuccess() {
         return success;
     }
-    
+
     private boolean success = true;
-    
+
     public int port = 29752;
     public int serialNum = 0;
-    
+
     public boolean serverReady = false;
-    
+
     /**
      * Server run method.
      */
     public void run() {
         try {
-            
+
             // We have to configure the server session ID cache before
             // creating any server sockets.
             SSLServerSocket.configServerSessionIDCache(10, 100, 100, null);
-            
+
             // open the server socket and bind to the port
             System.out.println("Server about to create socket");
             SSLServerSocket serverSock = new SSLServerSocket(port, 5, null, null,
@@ -414,20 +440,20 @@ public class SSLClientAuth implements Runnable {
                 serverSock.setServerCert(nssServerCert);
                 System.out.println("Server specified cert directly");
             }
-            
+
             // tell the client we're ready
             synchronized(this) {
                 serverReady = true;
                 this.notify();
             }
-            
+
             // accept the connection
             System.out.println("Server about to accept");
             SSLSocket sock = (SSLSocket) serverSock.accept();
             System.out.println("Server accepted");
             sock.addHandshakeCompletedListener(
                     new HandshakeListener("server", this));
-            
+
             // try to read some bytes, to allow the handshake to go through
             InputStream is = sock.getInputStream();
             try {
@@ -439,7 +465,7 @@ public class SSLClientAuth implements Runnable {
             }
             sock.close();
             serverSock.close();
-            
+
         } catch(Exception e) {
             synchronized(this) {
                 serverReady = true;
@@ -450,7 +476,7 @@ public class SSLClientAuth implements Runnable {
         }
         System.out.println("Server exiting");
     }
-    
+
     static Extension makeBasicConstraintsExtension() throws Exception {
         SEQUENCE bc = new SEQUENCE();
         bc.addElement( new BOOLEAN(true) ); // cA
@@ -459,15 +485,15 @@ public class SSLClientAuth implements Runnable {
         OCTET_STRING enc = new OCTET_STRING(ASN1Util.encode(bc));
         return new Extension(bcOID, true, enc);
     }
-    
+
     static int nextRandInt(SecureRandom rand) throws Exception {
         int i;
         byte[] bytes = new byte[4];
         rand.nextBytes(bytes);
-        i =  ((int)bytes[0])<<24 | ((int)bytes[1])<<16 |
-                ((int)bytes[2])<<8 | ((int)bytes[3]);
+        i =  (bytes[0])<<24 | (bytes[1])<<16 |
+                (bytes[2])<<8 | (bytes[3]);
         System.out.println("generated random value:" + i);
         return i;
     }
-    
+
 }
